# cmake-template

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README-project.md  README.md  dependencies.cmake  examplelibConfig.cmake.in  setup.sh
.github/problem-matchers/: cppcheck.json
.github/workflows/: ci.yml  clang-format-check.yml
cmake/: build-guard.cmake  coverage.cmake  hardening.cmake  options.cmake  sanitizers.cmake  target-properties.cmake  tests.cmake  version.c.in  version.cmake  version.h.in  warnings.cmake
include/examplelib/: ExampleConcat.h
src/: CMakeLists.txt  ExampleMultiplier.cpp  ExampleMultiplier.h  main.cpp
src/examplelib/: CMakeLists.txt  ExampleConcat.cpp  ExampleInternal.cpp  ExampleInternal.h
systemd/: example.service.in  systemd.cmake
test/: .clang-tidy  CMakeLists.txt  ExampleMultiplier.test.cpp  main.test.cpp
test/examplelib/: ExampleConcat.test.cpp
